<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        app:cardCornerRadius="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#00BCD4"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/etusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textAutoComplete" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textAutoComplete" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ettogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <AutoCompleteTextView
                    android:id="@+id/etpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ettogleconfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <AutoCompleteTextView
                    android:id="@+id/etpassconfrim"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verify_password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/rggender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pria" />

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/wanita" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/cbAggre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/aggre"
                android:textColor="#FF9800"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#00BCD4"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/register"
                android:textColor="#FFF"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>