<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginAct">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="25dp"
        app:cardCornerRadius="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#00BCD4"
                android:textSize="30sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/etusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textAutoComplete" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ettogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:passwordToggleEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/etpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btlogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25sp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_acount" />

        <TextView
            android:id="@+id/tvregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>