<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingAct">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiNama"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/nama_user">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiEditNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_user" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiEditEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#C5BFBF"
            android:hint="@string/email" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiEditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiConfirmPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiEditConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/oldpass" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="20dp"
        android:id="@+id/btConfirm"
        android:text="@string/simpan"
        android:textColor="@android:color/white" />


</LinearLayout>